implementing creating a playlist
